--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
-  "name": "electron2",
+  "name": "electron-app",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Hola mundo Electron.js!",
+  "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "electron ."
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "author": "Jesiel Palacios",
+  "license": "ISC",
+  "devDependencies": {
+    "electron": "^15.1.0"
+  }
 }
